# Agent-Shell

./: .gitignore  Cargo.toml  LICENSE  README.md  UI_INTEGRATION_REVIEW.md
.github/workflows/: ci.yml
agent-py/: README.md  agent.py  requirements.txt
crates/agent-analytics/: Cargo.toml
crates/agent-analytics/src/: aggregations.rs  lib.rs  reports.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent_loop.rs  claude_detect.rs  command_parser.rs  config.rs  context.rs  error.rs  event_bus.rs  git_linker.rs  git_tracker.rs  lib.rs  profiles.rs  provider.rs  provider_registry.rs  scheduler.rs  scrubber.rs  session.rs  terminal_session.rs  tool_loop.rs  tool_registry.rs  types.rs
crates/agent-core/src/capture/: hook.rs  mod.rs  types.rs
crates/agent-db/: Cargo.toml
crates/agent-db/src/: blob.rs  collection.rs  database.rs  engine.rs  error.rs  format.rs  hint.rs  keydir.rs  lib.rs  merge.rs  query.rs  stats.rs
crates/agent-plugins/: Cargo.toml
crates/agent-plugins/src/: lib.rs
crates/agent-pty/: Cargo.toml
crates/agent-pty/src/: capture.rs  export.rs  lib.rs  player.rs  recorder.rs  session.rs  shell.rs
crates/agent-search/: Cargo.toml
crates/agent-search/src/: indexer.rs  lib.rs  query.rs
crates/agent-server/: Cargo.toml
crates/agent-server/src/: ipc.rs  ipc_handlers.rs  lib.rs  routes.rs  state.rs
crates/agent-skills/: Cargo.toml
crates/agent-skills/src/: indexer.rs  lib.rs  models.rs  search.rs  validation.rs  watcher.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: env_detect.rs  file_ops.rs  lib.rs  python_exec.rs  sandbox.rs  shell_exec.rs  skill_load.rs  web_fetch.rs
crates/agent-ui/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/agent-ui/src/: App.tsx  api.rs  constants.ts  index.css  main.rs  main.tsx  types.ts  vite-env.d.ts
crates/agent-ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/agent-ui/src-tauri/icons/: icon.icns
crates/agent-ui/src-tauri/src/: lib.rs  main.rs
crates/agent-ui/src/components/: Canvas.tsx  Card.tsx  ConfirmationModal.tsx  ConnectionLines.tsx  SettingsModal.tsx  Sidebar.tsx  Toolbar.tsx
crates/agent-ui/src/components/cards/: AnalyticsCard.tsx  ChatCard.tsx  ContextCard.tsx  NoteCard.test.tsx  NoteCard.tsx  PluginsCard.tsx  SessionCard.tsx  SkillsCard.tsx  TerminalCard.tsx
crates/agent-ui/src/services/: api.ts  storage.ts
src/: main.rs  repl.rs
