[package]
name = "agent-analytics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Analytics, aggregation, and reporting for agent-shell sessions"

[dependencies]
agent-core = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
