[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core agent loop, sessions, tool registry, and configuration for agent-shell"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
async-openai = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
