[package]
name = "agent-db"
version.workspace = true
edition.workspace = true
description = "Bitcask-style embedded key-value database engine"

[dependencies]
crc32fast = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
