[package]
name = "agent-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin trait, lifecycle registry, and category system for agent-shell"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
