[package]
name = "agent-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Full-text search over terminal sessions and commands using Tantivy"

[dependencies]
agent-core = { workspace = true }
tantivy = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
