[package]
name = "agent-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP/WebSocket server mode for agent-shell"

[dependencies]
agent-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
hyper = "1"
tokio = { workspace = true }
tempfile = { workspace = true }
