[package]
name = "agent-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Skill system for agent-shell: indexing, search, and file watching"

[dependencies]
chrono = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
