[package]
name = "agent-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Built-in tools for agent-shell: shell exec, file ops, web fetch, code interpreter"

[dependencies]
agent-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
bollard = { workspace = true }
uuid = { workspace = true }
