[package]
name = "agent-ui"
version = "0.1.0"
edition = "2021"
description = "Web UI for agent-shell — Leptos CSR app compiled to WASM"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Headers",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Storage",
    "TextDecoder",
    "Window",
    "AbortController",
    "AbortSignal",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
